<resources>
    <string name="app_name">Task Management System</string>
    <string name="labelName">Task Board</string>
    <string name="addBtnDes">Add Btn Des</string>
    <string name="taskId">Id: </string>
    <string name="taskIdHint">1</string>
    <string name="taskName">Task Name : </string>
    <string name="taskNameHint">Task</string>
    <string name="taskDes">Description : </string>
    <string name="taskDesHint">DSA</string>
    <string name="taskPriority">Priority : </string>
    <string name="taskPriorityHint">1</string>
    <string name="taskDeadline">Deadline : </string>
    <string name="taskDeadlineHint">Enter the date</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="edit">Update</string>
    <string name="delete">Delete</string>
    <string name="todo">TODO</string>
    <string name="done_button">Done</string>
</resources>