<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/label_book_library_system"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:background="@color/peach"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/labelName"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_book_library_system"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:text="@string/taskName"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/task_name"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:width="150dp"
                android:textColor="@color/black"
                android:autofillHints="Enter task description."
                android:hint="@string/taskNameHint"
                android:textSize="20sp"
                android:textStyle="italic"
                tools:ignore="LabelFor,TextFields" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:text="@string/taskDes"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/task_des"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:width="150dp"
                android:textColor="@color/black"
                android:autofillHints="Enter task description."
                android:hint="@string/taskDesHint"
                android:textSize="20sp"
                android:textStyle="italic"
                tools:ignore="LabelFor,TextFields" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:text="@string/taskPriority"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/task_priority"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:width="150dp"
                android:autofillHints="@string/taskPriorityHint"
                android:hint="@string/taskPriorityHint"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="italic"
                tools:ignore="LabelFor,TextFields" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:text="@string/taskDeadline"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/task_deadline"
                android:autofillHints="@string/taskDeadlineHint"
                android:hint="@string/taskDeadlineHint"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:width="150dp"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="italic"
                tools:ignore="LabelFor,TextFields" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2"
        app:layout_constraintVertical_bias="0.0">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp" />

    </LinearLayout>

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/peach"
        android:text="@string/add"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2"
        tools:ignore="ButtonStyle" />

</androidx.constraintlayout.widget.ConstraintLayout>

