<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@drawable/boarder_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewTaskId"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="@string/taskId"
                    android:textColor="@color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <TextView
                    android:id="@+id/textViewTaskName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:textColor="@color/black"
                    android:text="@string/taskName"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/taskDeadline"
                    android:textColor="@color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:paddingBottom="8dp" />


                <TextView
                    android:id="@+id/textViewTaskDeadline"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/taskDeadline"
                    android:textColor="@color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:paddingBottom="8dp" />

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/taskPriority"
                    android:textColor="@color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:paddingBottom="8dp" />

                <TextView
                    android:id="@+id/textViewTaskPriority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/taskPriority"
                    android:textColor="@color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:paddingBottom="8dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewTaskDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/taskDes"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:paddingBottom="8dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
